chore: add eslint max-len rules

--- a/.eslintrc
+++ b/.eslintrc
@@ -4,5 +4,8 @@
     "browser": true,
     "node": true
   },
-  "extends": "@antfu"
+  "extends": "@antfu",
+  "rules": {
+    "max-len": ["error", { "code": 100} ]
+  }
 }
