--- a/package.json
+++ b/package.json
@@ -1,4 +1,4 @@
- {
+{
   "name": "pkg-name",
   "type": "module",
   "version": "0.0.0",
@@ -47,6 +47,7 @@
     "bumpp": "^8.2.1",
     "eslint": "^8.23.1",
     "esno": "^0.16.3",
+    "picocolors": "^1.0.0",
     "pnpm": "^7.12.0",
     "rimraf": "^3.0.2",
     "typescript": "^4.8.3",
