--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,7 +9,10 @@
     "strictNullChecks": true,
     "resolveJsonModule": true,
     "skipLibCheck": true,
-    "skipDefaultLibCheck": true
+    "skipDefaultLibCheck": true,
+    "baseUrl": ".",
+    "paths": {
+      "utils/*": ["utils/*"]
+    }
   },
-  "include": ["packages/**/*"]
 }
