--- a/package.json
+++ b/package.json
@@ -9,33 +9,13 @@
   "keywords": [],
   "sideEffects": false,
   "scripts": {
-    "build": "unbuild",
-    "dev": "unbuild --stub",
     "lint": "eslint --cache --ext ts,tsx,vue .",
-    "prepublishOnly": "nr build",
     "release": "bumpp && npm publish",
-    "start": "esno src/index.ts",
     "test": "vitest",
     "typecheck": "tsc --noEmit"
   },
-  "exports": {
-    ".": {
-      "types": "./dist/index.d.ts",
-      "require": "./dist/index.cjs",
-      "import": "./dist/index.mjs"
-    }
-  },
   "main": "./dist/index.mjs",
-  "module": "./dist/index.mjs",
   "types": "./dist/index.d.ts",
-  "typesVersions": {
-    "*": {
-      "*": [
-        "./dist/*",
-        "./dist/index.d.ts"
-      ]
-    }
-  },
   "files": [
     "dist"
   ],
@@ -43,16 +23,25 @@
     "@antfu/eslint-config": "^0.27.0",
     "@antfu/ni": "^0.18.0",
     "@antfu/utils": "^0.5.2",
+    "@types/inquirer": "^9.0.3",
     "@types/node": "^18.7.18",
+    "@types/validate-npm-package-name": "^4.0.0",
     "bumpp": "^8.2.1",
+    "commander": "^9.4.1",
     "eslint": "^8.23.1",
     "esno": "^0.16.3",
+    "gogocode": "^1.0.55",
+    "inquirer": "^9.1.4",
     "picocolors": "^1.0.0",
     "pnpm": "^7.12.0",
     "rimraf": "^3.0.2",
+    "tsup": "^6.5.0",
     "typescript": "^4.8.3",
-    "unbuild": "^0.8.11",
+    "validate-npm-package-name": "^5.0.0",
     "vite": "^3.1.2",
     "vitest": "^0.23.4"
+  },
+  "dependencies": {
+    "vue": "^2.0.0"
   }
 }
