--- a/packages/script-ghost/package.json
+++ b/packages/script-ghost/package.json
@@ -4,10 +4,14 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
-    "build": "tsc && vite build",
-    "preview": "vite preview"
+    "dev": "tsup --watch",
+    "build": "tsc --noEmit && tsup --minify"
   },
+  "main": "./dist/index.cjs",
+  "types": "./dist/index.d.ts",
+  "files": [
+    "dist"
+  ],
   "devDependencies": {
     "@wes/type-tools": "workspace:^0.0.0"
   }
