--- a/packages/script-ghost/package.json
+++ b/packages/script-ghost/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "tsup --watch",
-    "build": "tsc --noEmit && tsup --minify"
+    "build": "tsc --noEmit && tsup-node --minify"
   },
   "main": "./dist/index.cjs",
   "types": "./dist/index.d.ts",
