--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "test": "vitest",
     "typecheck": "tsc --noEmit"
   },
-  "main": "./dist/index.mjs",
+  "main": "./dist/index.js",
   "types": "./dist/index.d.ts",
   "files": [
     "dist"
