--- a/packages/script-ghost/package.json
+++ b/packages/script-ghost/package.json
@@ -7,7 +7,7 @@
     "dev": "tsup --watch",
     "build": "tsc --noEmit && tsup-node --minify"
   },
-  "main": "./dist/index.cjs",
+  "main": "./dist/index.js",
   "types": "./dist/index.d.ts",
   "files": [
     "dist"
