--- a/packages/script-ghost/package.json
+++ b/packages/script-ghost/package.json
@@ -3,12 +3,21 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/winchesHe/wes-utils-monorepo",
+    "directory": "packages/script-ghost"
+  },
+  "homepage": "https://github.com/winchesHe/wes-utils-monorepo/tree/main/packages/script-ghost",
   "scripts": {
     "dev": "tsup --watch",
     "build": "tsc --noEmit && tsup-node --minify"
   },
-  "main": "./dist/index.js",
-  "types": "./dist/index.d.ts",
+  "bin": {
+    "ghost": "dist/bin.js"
+  },
+  "main": "dist/index.js",
+  "types": "dist/index.d.ts",
   "files": [
     "dist"
   ],
