--- a/packages/script-ghost/package.json
+++ b/packages/script-ghost/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@winches/ghost",
-  "version": "1.0.4",
+  "version": "1.1.0",
   "type": "module",
   "author": "wincheshe",
   "repository": {
@@ -13,7 +13,7 @@
     "dev": "tsup --watch",
     "build": "tsc --noEmit && tsup-node --minify",
     "release": "bumpp && npm publish",
-    "scanGhost": "esno src/bin.ts scanGhost"
+    "scanGhost": "esno dist/bin.js scanGhost"
   },
   "bin": {
     "ghost": "dist/bin.js"
@@ -27,8 +27,12 @@
     "access": "public"
   },
   "registry": "https://registry.npmjs.org/",
-  "devDependencies": {
-    "@wes/type-tools": "workspace:^0.0.0"
+  "dependencies": {
+    "commander": "^9.4.1",
+    "gogocode": "^1.0.55",
+    "inquirer": "^9.1.4",
+    "picocolors": "^1.0.0",
+    "validate-npm-package-name": "^5.0.0"
   },
   "bugs": {
     "url": "https://github.com/winchesHe/wes-utils-monorepo/issues"
