--- a/packages/script-ghost/package.json
+++ b/packages/script-ghost/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@winches/ghost",
-  "version": "1.1.1",
+  "version": "1.1.2",
   "type": "module",
   "author": "wincheshe",
   "repository": {
@@ -32,7 +32,8 @@
     "gogocode": "^1.0.55",
     "inquirer": "^9.1.4",
     "picocolors": "^1.0.0",
-    "validate-npm-package-name": "^5.0.0"
+    "validate-npm-package-name": "^5.0.0",
+    "fast-glob": "^3.2.12"
   },
   "bugs": {
     "url": "https://github.com/winchesHe/wes-utils-monorepo/issues"
