--- a/packages/type-tools/package.json
+++ b/packages/type-tools/package.json
@@ -1,12 +1,29 @@
 {
-  "name": "@wes/type-tools",
-  "private": true,
-  "version": "0.0.0",
+  "name": "@winches/type-tools",
+  "version": "0.0.1",
   "type": "module",
   "scripts": {
     "dev": "tsup --watch",
-    "build": "tsc --noEmit && tsup --minify"
+    "build": "tsc --noEmit && tsup-node --minify"
   },
-  "devDependencies": {
-  }
+  "devDependencies": {},
+  "description": "日常ts(typescript)工具函数 泛型 ts工具",
+  "main": "dist/index.js",
+  "types": "dist/index.d.ts",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/winchesHe/wes-utils-monorepo.git"
+  },
+  "keywords": [
+    "ts(typescript)工具",
+    "泛型",
+    "ts工具",
+    "类型体操"
+  ],
+  "author": "wincheshe",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/winchesHe/wes-utils-monorepo/issues"
+  },
+  "homepage": "https://github.com/winchesHe/wes-utils-monorepo/tree/main/packages/type-tools"
 }
