--- a/packages/script-ghost/package.json
+++ b/packages/script-ghost/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@winches/ghost",
-  "version": "1.1.3",
+  "version": "1.1.4",
   "type": "module",
   "author": "wincheshe",
   "repository": {
@@ -40,5 +40,10 @@
   },
   "license": "ISC",
   "description": "幽灵依赖扫描工具 scan ghost in project",
-  "keywords": ["ghost", "scan", "幽灵依赖扫描", "遍历文件"]
+  "keywords": [
+    "ghost",
+    "scan",
+    "幽灵依赖扫描",
+    "遍历文件"
+  ]
 }
