--- a/packages/type-tools/package.json
+++ b/packages/type-tools/package.json
@@ -1,16 +1,19 @@
 {
   "name": "@winches/type-tools",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "type": "module",
   "scripts": {
     "dev": "tsup --watch",
     "build": "tsc --noEmit && tsup-node --minify",
-    "publish": "npm run build && npm publish"
+    "publish": "npm publish"
   },
   "devDependencies": {},
   "description": "日常ts(typescript)工具函数 泛型 ts工具 type gymnastics",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
+  "files": [
+    "dist"
+  ],
   "repository": {
     "type": "git",
     "url": "git+https://github.com/winchesHe/wes-utils-monorepo.git",
