chore: remove publish script

--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -4,8 +4,7 @@
   "type": "module",
   "scripts": {
     "dev": "tsup --watch",
-    "build": "tsc --noEmit && tsup-node --minify",
-    "publish": "npm publish"
+    "build": "tsc --noEmit && tsup-node --minify"
   },
   "devDependencies": {},
   "description": "日常ts(typescript)工具函数 如：链式调用函数、缓存装饰器...等等 type gymnastics",
