--- a/packages/type-tools/package.json
+++ b/packages/type-tools/package.json
@@ -4,8 +4,7 @@
   "type": "module",
   "scripts": {
     "dev": "tsup --watch",
-    "build": "tsc --noEmit && tsup-node --minify",
-    "publish": "npm publish"
+    "build": "tsc --noEmit && tsup-node --minify"
   },
   "devDependencies": {},
   "description": "日常ts(typescript)工具函数 泛型 ts工具 type gymnastics",
