feat(utile): 新增彩色log函数

--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -4,9 +4,10 @@
   "type": "module",
   "scripts": {
     "dev": "tsup --watch",
-    "build": "tsc --noEmit && tsup-node --minify"
+    "build": "tsc --noEmit && tsup-node --minify",
+    "changlog": "npx conventional-changelog -p angular -i CHANGELOG.md -s",
+    "release": "bumpp --execute=\"nr changlog\" --all"
   },
-  "devDependencies": {},
   "description": "日常ts(typescript)工具函数 如：链式调用函数、缓存装饰器...等等 type gymnastics",
   "main": "dist/index.cjs",
   "module": "dist/index.js",
@@ -34,5 +35,8 @@
   "bugs": {
     "url": "https://github.com/winchesHe/wes-utils-monorepo/issues"
   },
-  "homepage": "https://github.com/winchesHe/wes-utils-monorepo/tree/main/packages/utils"
+  "homepage": "https://github.com/winchesHe/wes-utils-monorepo/tree/main/packages/utils",
+  "dependencies": {
+    "chalk": "^5.3.0"
+  }
 }
