--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -30,7 +30,8 @@
   "author": "wincheshe",
   "license": "ISC",
   "publishConfig": {
-    "access": "public"
+    "access": "public",
+    "registry": "https://registry.npmjs.org/"
   },
   "bugs": {
     "url": "https://github.com/winchesHe/wes-utils-monorepo/issues"
