--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -4,7 +4,7 @@
   "type": "module",
   "scripts": {
     "dev": "tsup --watch",
-    "build": "tsc --noEmit && tsup-node --minify",
+    "build": "tsc --noEmit && tsup-node",
     "changlog": "npx conventional-changelog -p angular -i CHANGELOG.md -s --commit-path .",
     "release": "bumpp --execute=\"nr changlog\" --all",
     "prepublishOnly": "nr build"
