--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -44,6 +44,7 @@
   },
   "homepage": "https://github.com/winchesHe/wes-utils-monorepo/tree/main/packages/utils",
   "dependencies": {
-    "chalk": "^5.3.0"
+    "chalk": "^5.3.0",
+    "diff-match-patch-es": "^0.1.0"
   }
 }
