--- a/packages/type-tools/package.json
+++ b/packages/type-tools/package.json
@@ -5,6 +5,8 @@
   "scripts": {
     "dev": "tsup --watch",
     "build": "tsc --noEmit && tsup-node",
+    "changelog": "npx conventional-changelog -p angular -i CHANGELOG.md -s --commit-path .",
+    "release": "bumpp --execute=\"nr changelog\" --all",
     "prepublishOnly": "nr build"
   },
   "devDependencies": {},
