--- a/packages/type-tools/package.json
+++ b/packages/type-tools/package.json
@@ -1,12 +1,12 @@
 {
   "name": "@winches/type-tools",
-  "version": "0.0.4",
+  "version": "0.0.5",
   "type": "module",
   "scripts": {
     "dev": "tsup --watch",
     "build": "tsc --noEmit && tsup-node",
     "changelog": "npx conventional-changelog -p angular -i CHANGELOG.md -s --commit-path .",
-    "release": "bumpp --execute=\"nr changelog\" --all",
+    "release": "bumpp --tag false --execute=\"nr changelog\" --all && npm publish",
     "prepublishOnly": "nr build"
   },
   "devDependencies": {},
