--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -6,7 +6,7 @@
     "dev": "tsup --watch",
     "build": "tsc --noEmit && tsup-node",
     "changelog": "npx conventional-changelog -p angular -i CHANGELOG.md -s --commit-path .",
-    "release": "bumpp --execute=\"nr changelog\" --all && npm publish",
+    "release": "bumpp --tag false --execute=\"nr changelog\" --all && npm publish",
     "prepublishOnly": "nr build"
   },
   "description": "日常ts(typescript)工具函数 如：链式调用函数、缓存装饰器...等等 type gymnastics",
